@@ -1,3 +1,8 @@
+2008-06-25  chl  <chl@tuxfamily.org>
+
+	- add strsep to openbsd-compat, to build on IRIX64. Taken from
+	portable openssh. (reported by Elias Pipping).
+
 2008-06-24  chl  <chl@tuxfamily.org>
 
 	- fix some newly introduced issue du to my last update:
